seedboxk8s/applications/bazarr/StatefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: bazarr
  namespace: tortuga
spec:
  replicas: 1
  serviceName: bazarr
  selector:
    matchLabels:
      app.kubernetes.io/name: bazarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: bazarr
    spec:
      securityContext:
        fsGroup: ${plexGid}
      containers:
        # https://github.com/linuxserver/docker-bazarr/releases
        - image: ghcr.io/linuxserver/bazarr:v1.6.2-ls367
          name: bazarr
          ports:
            - containerPort: 6767
          volumeMounts:
            - mountPath: /config
              name: bazarr-config-pvc
              readOnly: false
            - mountPath: /media
              name: seedboxmedia-nfs
              readOnly: false
      volumes:
        - name: import
          emptyDir: {}
        - name: bazarr-config-pvc
          persistentVolumeClaim:
            claimName: bazarr-config-pvc
        - name: seedboxmedia-nfs
          persistentVolumeClaim:
            claimName: seedboxmedia-nfs-pvc
