seedboxk8s/applications/bazarr/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bazarr
  namespace: tortuga
spec:
  selector:
    app.kubernetes.io/name: bazarr
  ports:
  - protocol: TCP
    port: 80
    targetPort: 6767
