seedboxk8s/applications/bazarr/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bazarr
  namespace: tortuga
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Bazarr
    gethomepage.dev/group: Media
    gethomepage.dev/icon: bazarr
    gethomepage.dev/href: https://bazarr.${productionClusterFqdn}
spec:
  ingressClassName: traefik-tailscale
  entryPoints:
    - websecure
  routes:
    - match: Host(`bazarr.${productionClusterFqdn}`)
      kind: Rule
      services:
        - name: bazarr
          kind: Service
          port: 80
      middlewares:
        - name: authelia
          namespace: authelia
  tls:
    secretName: seedbox-wildcard-backing-secret
